# wavplayeralsa

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  make_protobuf.sh  rpi-cross-compile.md  run.sh  wavplayeralsa.cpp
.github/workflows/: docker-publish.yml
cross-compile/: toolchain-armv7l.cmake
player-web-control/: README.md  angular.json  package.json
player-web-control/e2e/src/: app.e2e-spec.ts
player-web-control/src/: index.html  karma.conf.js  styles.css
player-web-control/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  player.service.ts
python-tools/: mock_mqtt_song_play.py  query_files.py  send-song-req.py  send-stop-song.py  send_new_file.py  send_stop.py
src/: alsa_frames_transfer.cc  alsa_frames_transfer.h  audio_files_manager.cc  audio_files_manager.h  current_song_controller.cc  current_song_controller.h  http_api.cc  http_api.h  mqtt_api.cc  mqtt_api.h  player_actions_ifc.h  player_command.proto  player_events_ifc.h  player_req_http.cpp  player_req_http.hpp  player_req_ifc.hpp  position_report.proto  position_reporter.cpp  position_reporter.h  single_file_player.cpp  single_file_player.h  status_reporter.cpp  status_reporter_ifc.hpp  status_update_msg.h  wavplayeralsa.cpp  web_sockets_api.cc  web_sockets_api.h
src/services/: alsa_service.cc  alsa_service.h  config_service.cc  config_service.h
web/: 3rdpartylicenses.txt  index.html  main.63384173f9570f2796f5.js  main.ec73c7d0a39a9271c906.js  main.f2d5ecacd8e150af7951.js
